src/_patterns/02-components/brightcove-player/src/brightcove-player.scss
brightcove-player {
  display: block;
  width: 100%;
  // position: relative;
  // height: 0;
  // --aspect-ratio-height: 16;
  // --aspect-ratio-width: 9;
  // padding-top: calc( var(--aspect-ratio-height, 1) / var(--aspect-ratio-width, 1) * 100%);
  
  &.is-playing {
    opacity: 1;
  }
}


.video-js {
  // @supports (--custom:property) {
  //   padding-top: calc( var(--aspect-ratio-height, 1) / var(--aspect-ratio-width, 1) * 100%);
  // }
  min-height: 100%;
  min-width: 100%;
}

// .c-bolt-background-video {
//   pointer-events: none;

//   &:before {
//     position: absolute;
//     content: '';
//     top: 50%;
//     left: 50%;
//     transform: translate(-50%, -50%);
//     width: 101%;
//     height: 101%;
//     box-shadow: inset 0 0 120px 12px rgba($black, .5);
//     background-color: rgba(#100900, .3);
//     background-image: none;
//     z-index: 6;
//   }

//   img,
//   picture,
//   iframe,
//   video,
//   object {
//     position: absolute;
//     display: block;
//     transform: translate(-50%, -50%);
//     width: auto;
//     height: 100%;
//     left: 50%;
//     top: 50%;

//     @supports (object-fit: cover) {
//       object-fit: cover;
//       transform: none;
//       width: 100%;
//       height: auto;
//       min-height: 100%;
//       left: 0;
//       top: 0;
//     }
//   }

//   img,
//   picture {
//     z-index: 4;
//   }

//   video {
//     opacity: 1;
//     transition: opacity .3s linear, visibility .3s linear;
//     z-index: 5;
//     visibility: visible;

//     &.is-hidden {
//       opacity: 0;
//       visibility: hidden;
//     }
//   }


//   video::-webkit-media-controls-start-playback-button {
//     display: none !important;
//     -webkit-appearance: none;
//   }

//   .o-bolt-ratio {
//     display: none !important;
//     opacity: 0;
//     transition: opacity .3s linear;
//   }
// }




// Modal
// position: absolute;
// transform: scale(0) translateX(-50%) translateY(-50%);
// transition: all .6s ease-in-out;
// height: 6rem;
// width: 6rem;
// opacity: 0;
// top: 50%;
// left: 50%;
// z-index: 50;
// background-color: #191919;
// border-radius: 50%;
// border-width: 0;
// padding: 0;



// button wrapper
// transform: translateX(200%);
// transition: all .15s cubic-bezier(.5, -.25, .5, 2);
// position: absolute;
// top: auto;
// bottom: 2rem;
// right: 2rem;
// z-index: 51;
// opacity: 0;
// cursor: pointer;

// is-visible
// transform: translateX(0);
// transition: all .6s cubic-bezier(.5, -.25, .5, 2) 1s;
// z-index: 100;
// opacity: .8;

